module/core/derive_tools/tests/inc/deref/struct_named.stderr
error: Deref cannot be derived for multi-field structs without a `#[deref]` attribute on one field.
  --> tests/inc/deref/struct_named.rs:4:1
   |
4  | / #[ allow( dead_code ) ]
5  | | #[ derive( Deref) ]
6  | | struct StructNamed
...  |
9  | |   b : i32,
10 | | }
   | |_^

warning: unused import: `core::ops::Deref`
 --> tests/inc/deref/struct_named.rs:1:5
  |
1 | use core::ops::Deref;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/inc/deref/struct_named.rs:12:43
   |
12 | include!( "./only_test/struct_named.rs" );
   |                                           ^ consider adding a `main` function to `$DIR/tests/inc/deref/struct_named.rs`
